# esp_playground

./: README.md
projects/: README.md  ___main.c  sample_gpio_toggle_task.c
projects/hello_world/: CMakeLists.txt  sdkconfig  sdkconfig.old
projects/hello_world/main/: hello_world_main.c
tools/: eclipse_sublime_theme.xml
